--- a/src/js/Components/EventInfo/ScoreIndicator/ScoreIndicator.scss
+++ b/src/js/Components/EventInfo/ScoreIndicator/ScoreIndicator.scss
@@ -5,16 +5,16 @@
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
+   flex-basis: 48px;
 }
 
 :local(.scoreBox) {
    border-radius: 2px;
    text-align: center;
    background-color: #333333;
-   width: 38px;
+   width: 100%;
    height: 40px;
    min-height: 40px;
-   min-width: 38px;
    margin: 0 5px;
 }
 
