--- a/src/js/app.scss
+++ b/src/js/app.scss
@@ -1,5 +1,6 @@
 @import './shared';
 
 body {
+   margin: 8px 0 0 0;
    @include smoothing;
 }
